force-app/main/default/objects/IF_INFO__c/IF_INFO__c.object-meta.xml
<CustomObject>
    <description>I/F구현관련 개발단위 세부정보 (Master, Detail 분리 구성 정보 등)</description>
    <label>IF INFOs</label>
    <nameField>
        <displayFormat>IF-{YYYY}{MM}{DD}{0000000000}</displayFormat>
        <label>Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF INFOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>