force-app/main/default/objects/IF_INFO__c/fields/IN_IF_ID__c.field-meta.xml
<CustomField>
    <fullName>IN_IF_ID__c</fullName>
    <description>내부 식별용 IF ID</description>
    <label>Internal IF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>