force-app/main/default/objects/IF_INFO__c/fields/TargetAccessToken__c.field-meta.xml
<CustomField>
    <fullName>TargetAccessToken__c</fullName>
    <label>TARGET ACCESS TOKEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>