force-app/main/default/objects/IF_INFO__c/fields/TO__c.field-meta.xml
<CustomField>
    <fullName>TO__c</fullName>
    <description>false</description>
    <label>TO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>