force-app/main/default/objects/IF_INFO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IF_ID__c</columns>
    <columns>IN_IF_ID__c</columns>
    <columns>TITLE__c</columns>
    <columns>FROM__c</columns>
    <columns>TO__c</columns>
    <columns>URL__c</columns>
    <columns>FORCE_LOGGING__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>