force-app/main/default/objects/IF_INFO__c/listViews/GC.listView-meta.xml
<ListView>
    <fullName>GC</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>GC</label>
</ListView>