force-app/main/default/objects/IF_INFO__c/listViews/IF_Info.listView-meta.xml
<ListView>
    <fullName>IF_Info</fullName>
    <columns>NAME</columns>
    <columns>IF_ID__c</columns>
    <columns>IN_IF_ID__c</columns>
    <columns>TITLE__c</columns>
    <columns>URL__c</columns>
    <filterScope>Mine</filterScope>
    <label>IF Info</label>
</ListView>